--- a/iTP.vcxproj.filters
+++ b/iTP.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="notes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="iTP.cpp">
